# Rust-HTTP-Server

./: .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  git_push.sh  justfile
http/: Cargo.toml
http/src/: chat.rs  lib.rs  request.rs  response.rs  route.rs  sockets.rs
src/: main.rs  static_routes.rs
